# DiTEC_WDN_dataset

./: .gitignore  LICENSE  README.md  concat_zarr.py  main.py  mkdocs.yml  profiler_report.json  pyproject.toml  requirements.txt  run_yaml_batch.bat  start_dashboard.py  test.py  tut_interface.py
ditec_wdn_dataset/arguments/: test_data_interface_v6_config.yaml  test_data_interface_v7_config.yaml  test_sim_config.yaml
ditec_wdn_dataset/core/: datasets_large.py  demand_generator.py  demand_generator_v2.py  simgen.py
ditec_wdn_dataset/hf/: dataset.py
ditec_wdn_dataset/opt/: gather.py  opt.py  pso22.py
ditec_wdn_dataset/utils/: auxil_v8.py  configs.py  misc.py  properties.py  terrain.py
ditec_wdn_dataset/vis/: denvis.py
docs/: index.md  installation.md  overview.md  parameters.md  quickstart.md
gigantic_dataset/arguments/: test_sim_config.yaml
gigantic_dataset/core/: datasets_large.py  demand_generator_v2.py  simgen.py
gigantic_dataset/dummy/: gather.py  pso22.py  test_components.py
gigantic_dataset/utils/: auxil_v8.py  configs.py
