[tool.poetry]
name = "dwd"
version = "0.1.0"
description = ""
authors = ["cuongth95 <truonghuycuong95@gmail.com>", "atello <a.tello@rug.nl>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "ditec_wdn_dataset" },
    { include = "ditec_wdn_dataset/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
